<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.bielicki.brandon.mbira.NewUserForm"
    android:background="#37474F">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userNameText"
        android:layout_marginLeft="25dp"
        android:textColor="#ffffffff"
        android:textColorHint="#FFFFFF"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/username" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fullNameText"
        android:layout_marginLeft="25dp"
        android:textColor="#ffffffff"
        android:textColorHint="#FFFFFF"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/userNameText"
        android:hint="@string/fullName" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/emailText"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:textColor="#ffffffff"
        android:textColorHint="#FFFFFF"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/fullNameText"
        android:hint="@string/email" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/paswordOneText"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:textColor="#ffffffff"
        android:textColorHint="#FFFFFF"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/emailText"
        android:hint="@string/password"
        android:password="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passwordTwoText"
        android:textColor="#ffffffff"
        android:textColorHint="#FFFFFF"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/paswordOneText"
        android:hint="@string/repeatPassword"
        android:password="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newUser"
        android:id="@+id/sendNewUserButton"
        android:layout_below="@+id/passwordTwoText"
        android:layout_centerHorizontal="true"
        android:background="#29B6F6"
        android:textColor="#fff"
        android:onClick="sendNewUser"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginTop="20dp" />

</RelativeLayout>
